# 3d-scene

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
shaders/: phong.frag
src/: Camera.h  Mesh.cpp  Mesh.h  ObjLoader.cpp  ObjLoader.h  Shader.cpp  Shader.h  main.cpp
